# bwrap_compose

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
bwrap_compose/: CONFIG_SCHEMA.md  __init__.py  builder.py  cli.py  composer.py  config.py  manifest.py  parser.py
examples/profiles/: github-copilot.yaml  python-sandbox.yaml  python-uv.yaml
examples/tools/: bash.yml  bwrap-root.yml  bwrap.yml  copilot.yml  grep.yaml  ls.yaml
tests/: test_additional_arg_grouping.py  test_additional_features.py  test_builder.py  test_builder_default_run.py  test_bwrap_integration.py  test_command_option.py  test_composer.py  test_config.py  test_config_dir.py  test_conflicts.py  test_env_paths.py  test_from_binary.py  test_from_command.py  test_merge_commands.py  test_tool_manifests.py  test_uniquefy_switches.py
